# miro-speedtest

./: .gitignore  README.md  miro-oauth.md  miro-python-client.md
.devcontainer/: devcontainer.json  postStart.sh
.github/: copilot-instructions.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/package/: __init__.py
backend/package/api/: __init__.py  health.py  oauth.py  sticky_note.py
backend/package/common/: __init__.py  logger.py
backend/package/db/: __init__.py  session.py  sqlite_storage.py
backend/package/util/: session.py
backend/src/package/api/: sticky_note.py  users.py
backend/src/package/util/: __init__.py  logger.py  settings.py
frontend/: .env.sample  package-lock.json  prettier.config.mjs  tsconfig.json
frontend/app/: layout.tsx
frontend/app/auth/1-signin/: page.tsx
frontend/app/auth/2-signed/: page.tsx
frontend/app/home/: page.tsx
frontend/components/: SDKUsageDemo.tsx  TestStickyNote.tsx
frontend_v2/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
frontend_v2/app/: page.tsx
frontend_v2/app/home/: page.tsx
frontend_v2/components/: SDKInit.tsx  TestStickyNote.tsx  TokenContext.tsx
