[project]
name = "miro-speedtest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.12",
  "httpx>=0.28.1",
  "miro-api>=2.2.4",
  "pydantic>=2.11.4",
  "pydantic-settings>=2.9.1",
  "tinydb>=4.8.2",
  "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.3.5",
  "python-dotenv>=1.1.0",
  "ruff>=0.11.10",
]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "AIR",    # Airflow
  "ERA",    # eradicate
  "D100",   # undocumented-public-module
  "D101",   # undocumented-public-class
  "D104",   # undocumented-public-package
  "COM812",
]
fixable = ["ALL"]
unfixable = [
  "F401", # unused-import
  "F841", # unused-variable
]

[tool.ruff.lint.mccabe]
max-complexity = 10 # maximum complexity

[tool.ruff.lint.pydocstyle]
convention = "google" # docstring style

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused-import
]

[tool.pyright]
typeCheckingMode = "basic"
